<resources>
    <string name="app_name">Tullab</string>
    <string name="shopping_basket">سلة المشتريات</string>
    <string name="service_type">الصنف/الخدمه</string>
    <string name="seller">البائع/مقدم الخدمه</string>
    <string name="price">السعر</string>
    <string name="quantity">الكميه</string>
    <string name="total">الاجمالي</string>
    <string name="discount_voucher">ادخل كود الخصم (ان وجد)</string>
    <string name="total_after_discount">الاجمالي بعد الخصم</string>
    <string name="delivery_data">بيانات الشحن</string>
    <string name="name">الاسم</string>
    <string name="address">العنوان</string>
    <string name="government">المحافظه</string>
    <string name="city">المدينة</string>
    <string name="zip_number">رقم بريدي</string>
    <string name="email">بريد الكتروني</string>
    <string name="phone">الهاتف</string>
    <string name="notes">ملاحظات</string>
    <string name="skip">متابعه</string>
    <string name="egyptian_pound">جنيه مصري</string>
    <string name="concurrency">العمله</string>
    <string name="choose_payment_method">اختر طريقة الدفع</string>
    <string name="fawrey">  فوري</string>
    <string name="sadad">سداد</string>
    <string name="visa_payment_discount">بطاقة ائتمان/دفع/خصم</string>
    <string name="maada">مدى</string>
    <string name="wallet">المحفظه</string>
    <string name="receipt_num">رقم الفاتوره</string>
    <string name="confirm_reserve">تأكيد الحجز</string>
    <string name="paid">المدفوع</string>
    <string name="re_request">اعادة الطلب</string>
    <string name="service_owner">صفحة مقدم الخدمه</string>
    <string name="cancel_request">الغاء الطلب</string>
    <string name="day_and_hour">اليوم والساعه</string>
    <string name="lecture_duration">مدة المحاضره</string>
    <string name="lecturer">المحاضر</string>
    <string name="service_provider">مقدم الخدمه</string>
    <string name="subject">الماده</string>
    <string name="explainer_student">الطالب الذي يشرح</string>
    <string name="explainee_student">الطالب الذي يتم الشرح له</string>
    <string name="send_msg_to_friend">ارسال رساله الي زميلك</string>
    <string name="send_msg">ارسال الرساله</string>
    <string name="splash_hint">منتجات و خدمات  \n لطلاب الجامعه</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="phone_email">رقم الهاتف/البريد الالكترونى</string>
    <string name="password">كلمه المرور</string>
    <string name="forgot_passord">نسيت كلمه المرور ؟</string>
    <string name="login_hint">تسجيل الدخول</string>
    <string name="new_account">تسجيل حساب جديد</string>
    <string name="acceptance_at">استخدامك للتطبيق يعنى موافقتك على</string>
    <string name="privice_">سياسه الخصوصيه و شروط الاستخدام</string>
    <string name="back">رجوع</string>
    <string name="signup">تسجيل حساب</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="birth_day">تاريخ\nالميلاد</string>
    <string name="day">اليوم</string>
    <string name="month">الشهر</string>
    <string name="year">السنة</string>
    <string name="country_hint">الدولة</string>
    <string name="collage_hint">الجامعة</string>
    <string name="faculty_hint">الكلية</string>
    <string name="feraqa_hint">الفرقة</string>
    <string name="department_hint">القسم</string>
    <string name="upload_img_hint">اضغط لتحميل صوره شخصيه</string>
    <string name="continue_hint">المتابعة</string>
    <string name="confirm_code_hint">تم ارسال رقم التفيل ال رقمك</string>
    <string name="vervify_code_hint">ادخل رمز التفعيل</string>
    <string name="password_confirm">تاكيد كلمة المرور</string>
    <string name="resend_msg">سنقوم بارسال رسالة الى بريدك الالكترونى \n بيبانات الدخول الجديدة</string>
    <string name="change_msg">) يمكنك تغيرها لاحقا فى الاعدادات (</string>
    <string name="send_hint">ارسال</string>
    <string name="students_services">خدمات طلابية</string>
    <string name="learning_services">خدمات تعلميه</string>
    <string name="socity_services">المجتمع الطلابى</string>
    <string name="tech_services">خدمات دعم</string>
    <string name="main">الرئيسية</string>
    <string name="map">الخريطة</string>
    <string name="my_orders">طلباتى</string>
    <string name="appointment_table">جدول المواعيد</string>
    <string name="invite_friends">دعوة الاصدقاء</string>
    <string name="help_support">المساعدة و الدعم</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="title_activity_library_map">Map</string>
    <string name="libraies">مكتبات</string>
    <string name="library_page">صفحة\nالمكتبة</string>
    <string name="delev">يقوم بالتوصيل</string>
    <string name="change">تغيير</string>
    <string name="press_to_see_library_profile">اضغط لمشاهدة  صفحة المكتبه</string>
    <string name="available_products">المنتجات المتاحه</string>
    <string name="etihad_talabt_alex">اتحاد طلبة جامعة الاسكندريه</string>
    <string name="add_to_car">ا+ضافه الى سلة المشتريات</string>
    <string name="trip_time">موعد الرحله</string>
    <string name="days_num">عدد الأيام</string>
    <string name="individual_num">عدد الأفراد</string>
    <string name="reserved_num">عدد المحجوز</string>
    <string name="reserved">المحجوز</string>
    <string name="be3sat_and_mena7">التعريف بالبعثانت والمنح الدراسيه</string>
    <string name="reserve">حجز+</string>
    <string name="article">لنيمتل يسنىلمي  يسنىلمسي بنىلنلىتثت بمىصثم بنىثبنىصثن بىثلصثىملىصثب  بصثمىلمىصثملىصثىل صىلىصثلخىصثل  خلىصثخلتخصثل  ثصلخصثتلخصثل خصثتلخقتلقى خثلتخثتل ثحصتلختصلختص ختلثحصتلحصثلت ختلخثصتخلتص صثلتصلتخل ثحصتلخلتخل تلصختلخ</string>
    <string name="add_comment_place_holder">اكتب تعليق هنا</string>
    <string name="add_comment">اضف التعليق</string>
    <string name="container">المحتوى</string>
    <string name="publish_my_article">نشر مدونتي</string>
    <string name="article_container">محتوي المدونه</string>
    <string name="msg_header"> <b>السادة / اتحاد طلاب جامعة الأسكندريه</b> \n تحيه طيبه وبعد,  </string>
    <string name="address_complain">عنوان الشكوي /المقترح</string>
    <string name="message">الرساله</string>
    <string name="write_article">كتابة مدونه</string>
    <string name="read_more">قراءة المزيد</string>
    <string name="nadwat">ندوات</string>
    <string name="help_leasons">دروس تعاونية</string>
    <string name="courses">كورسات</string>
    <string name="el_seminar">الندوة</string>
    <string name="seminar_creator">منظم الندوة</string>
    <string name="appointment">المواعيد</string>
    <string name="seminar_time">مدة الندوة</string>
    <string name="prodects_services_student">منتجات و خدمات\nلطلاب الجامعة</string>
    <string name="share_hint">قم بنسخ التالى او ارسالة الى اصدقائك \nلمشاكة التطبيق مع اصدقائك و زملائك</string>
    <string name="invite_friends_hint">قم بدعوة زملائك الاستمتاع بخدماتنا</string>
    <string name="copy_link">نسخ الرابط</string>
    <string name="share_link">مشاركه الرابط</string>
    <string name="services_call">الاتصال بخدمة العملاء</string>
    <string name="usage_way">طريقه الاستخدام</string>
    <string name="connection_ways">كما يمكنك التواصل معنا عن طريق الوسائل الاتية</string>
    <string name="massages">الرسائل</string>
    <string name="massage_hint">الرسالة</string>
    <string name="to_hint">الى</string>
    <string name="from">من</string>
    <string name="birthdate_">الميلاد</string>
    <string name="choose_hint">أختيار</string>
    <string name="fb">فيسبوك</string>
    <string name="twitter">تويتر</string>
    <string name="show_products">عرسض المنتجات و الخدمات</string>
    <string name="prodects_services">المنتجات و الخدمات</string>
    <string name="cources_tech_office">كورسات المكتب الفنى</string>
    <string name="sounds_watchs">الصوتيات و المرئيات</string>
    <string name="el_help_leasons">الدروس التعاونيه</string>
    <string name="choose_mareial">اختر المادة</string>
    <string name="students_society">المجتمع الطلابي</string>
    <string name="sandwich_shawerma_swory">سندوتش شاورما فراخ سوري كبير</string>
    <string name="food_available">توفر المنتج</string>
    <string name="delivery_time">موعد التسليم</string>
    <string name="number">العدد</string>
    <string name="foods_drinks">اطعمه ومشروبات</string>
    <string name="press_to_see_restaurant_profile">اضغط لمشاهدة صفحة المطعم</string>
    <string name="foods_menu">قائمة الأصناف</string>
    <string name="room">غرفه امام مجمع الكليات</string>
    <string name="press_to_see_office_profile">اضغط لمشاهدة صفحة المكتب</string>
    <string name="available_places">الأماكن المتاحه</string>
    <string name="available_nadwat_and_fa3leyat">الندوات والفاعليات المتاحه</string>
    <string name="available_trips">الرحلات المتاحه</string>
    <string name="reserve_trips">حجز رحلات</string>
    <string name="support_services">خدمات دعم</string>
    <string name="reserve_rooms">حجز سكن للمغتربين</string>
    <string name="oredr_foods_drinks">طلب اطعمه ومشروبات</string>
    <string name="nadwat_and_fa3leyat">فاعليات وندوات</string>
    <string name="torap_elmas">تراب الماس لأحمد مراد</string>
    <string name="print_on_canvas">طباعه على كانفاس</string>
    <string name="mastara_t_rotring">مسطره حرف T روترينج</string>
    <string name="tasmem_handassy_book">كتاب التصميم الهندسي</string>
    <string name="buying_books">شراء كتب وملازم</string>
    <string name="university_news">اخبار الجامعات</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="click_to_see_profile">اضغط هنا لمشاهده صفحةالمكتبة</string>
    <string name="action_settings">Settings</string>
</resources>
