<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:padding="@dimen/_10sdp"
        android:background="@color/blue"
        >
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/hospital_history"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/appointment_table"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/back"/>
    </LinearLayout>
    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:tabIndicatorColor="@color/blue"
        app:tabSelectedTextColor="@color/blue"
        app:tabTextColor="@color/gray"
        >
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:id="@+id/tab_courses"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_leasons"
            android:id="@+id/tab_help_leasons"
            />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nadwat"
            android:id="@+id/tab_seminar"
            />
    </android.support.design.widget.TabLayout>

    <include
        layout="@layout/container"
        />


</LinearLayout>