<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:padding="@dimen/_10sdp"
        android:background="@color/blue"
        >
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/discuss_issue"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/help_support"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            tools:ignore="RtlCompat" />
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/back"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/services_call"
        android:id="@+id/txt_services_call"
        tools:ignore="RtlCompat" />
    <View
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_9sdp"
        />
    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/privice_"
        android:id="@+id/txt_pravice_low"
        tools:ignore="RtlCompat" />
    <View
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_9sdp"
        />
    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/usage_way"
        android:id="@+id/txt_usage_way"
        tools:ignore="RtlCompat" />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/_12sdp"
        android:text="@string/connection_ways"
        />

    <include layout="@layout/social_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        />

</LinearLayout>