<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_5sdp"
    android:background="@color/light_Gray"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_Gray"
        android:padding="@dimen/_10sdp"
        >
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13sdp"
            android:text="@string/resend_msg"
            />

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/black"
            android:text="@string/change_msg"
            />

        <EditText
            android:elevation="@dimen/_5sdp"
            android:padding="@dimen/_7sdp"
            android:hint="@string/email"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:textAlignment="viewStart"
            android:drawableStart="@drawable/contact"
            android:background="@drawable/edt_shape"
            android:inputType="textWebEmailAddress"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/edt_email"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:elevation="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                android:text="@string/send_hint"
                android:layout_marginStart="@dimen/_7sdp"
                android:id="@+id/btn_send"
                tools:ignore="RtlCompat" />

            <Button
                android:layout_marginStart="@dimen/_7sdp"
                android:elevation="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/back_btn"
                android:textAllCaps="false"
                android:textColor="@color/Hard_Gray"
                android:textSize="@dimen/_17sdp"
                android:text="@string/back"
                android:id="@+id/btn_back"
                tools:ignore="RtlCompat" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>