<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/White"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="8dp"
                    android:text="@string/service_type" />

                <TextView
                    android:id="@+id/serviceType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:text="كتاب التصميم الهندسي"
                    android:textColor="@color/Pink" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/raduis_gray"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/price"
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/priceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="50"
                        android:textColor="@color/Black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/egyptian_pound"
                        android:textColor="@color/Black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Spinner
                        android:id="@+id/concurrencySp"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:paddingRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/concurrency"
                        android:textColor="@color/Blue" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/choose_payment_method"
                    android:textColor="@color/Blue" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right">

                    <TableRow android:weightSum="2">

                        <Switch
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:id="@+id/fawreySwitch"
                            android:text="@string/fawrey"
                            android:textColor="@color/Black"
                            android:thumbTextPadding="5dp" />

                        <Switch
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/sadad"
                            android:id="@+id/sadadSwitch"
                            android:textColor="@color/Black"
                            android:thumbTextPadding="5dp" />
                    </TableRow>

                    <TableRow android:weightSum="2">

                        <Switch
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/wallet"
                            android:id="@+id/walletSwitch"
                            android:textColor="@color/Black"
                            android:thumbTextPadding="5dp" />

                        <Switch
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/maada"
                            android:id="@+id/maadaSwitch"
                            android:textColor="@color/Black"
                            android:thumbTextPadding="5dp" />
                    </TableRow>

                    <TableRow>


                        <Switch
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/visa_payment_discount"
                            android:id="@+id/visaSwitch"
                            android:textColor="@color/Black"
                            android:thumbTextPadding="5dp" />
                    </TableRow>

                </TableLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/receiptNumEt"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edt_height"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/edt_shape"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:paddingRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/receipt_num"
                        android:textColor="@color/Blue" />
                </LinearLayout>
                <Button
                    android:id="@+id/buyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/btn_shape_light_green"
                    android:text="@string/confirm_reserve"
                    android:textColor="@color/White" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>