<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_Blue"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/discuss_issue" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="start"
            android:text="الشكاوى والمقترحات"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_weight=".6"
            android:gravity="end"
            android:text="@string/back"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/back"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_header"
        android:layout_margin="@dimen/_15sdp"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height"
        android:background="@drawable/edt_shape"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:hint="@string/address_complain"
        android:paddingRight="@dimen/_10sdp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_shape"
        android:lines="15"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:hint="@string/message"
        android:layout_gravity="right"
        android:gravity="right"
        android:paddingRight="@dimen/_10sdp"
        />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:text="@string/send_msg"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/btn_shape_blue"
         />

</LinearLayout>
</ScrollView>